Neuer Shop mit 4 Kategorien und schönen Farben - Food, Gear, Nether, End(locked), Shard Shop mit Spawnern